--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">faborfood</string>
+    <string name="app_name">FaborFood</string>
     <string name="confirmar_contrasena">Confirmar Contraseña</string>
     <string name="nombres">Nombres</string>
     <string name="apellidos">Apellidos</string>
